# toki

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.claude/agents/: admin-ui-agent.md  client-agent.md  code-reviewer.md  docs-agent.md  feature-orchestrator.md  proto-agent.md  server-agent.md  test-runner.md
.claude/commands/: release.md
.claude/skills/git-conventional-commit/: SKILL.md
.claude/skills/git-conventional-commit/evals/: evals.json
.github/workflows/: ci.yml
admin-ui/: .gitignore  buf.gen.yaml  buf.yaml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
admin-ui/src/: App.tsx  main.tsx
admin-ui/src/components/: AreaChart.tsx
admin-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx
admin-ui/src/hooks/: useWatch.ts
admin-ui/src/lib/: audit.ts  client.ts
admin-ui/src/views/: Bans.tsx  Login.tsx  Rooms.tsx  ServerView.tsx
client/: package.json
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
crates/client/: Cargo.toml
crates/client/assets/icon/: README.md  Toki.icns  build-platform-icons.sh  icon-spec.md
crates/client/macos/: Info.plist.ext.xml  README.md
crates/client/src/: app.rs  audio.rs  config.rs  dsp.rs  hotkey.rs  identity.rs  main.rs  runtime.rs  state.rs  telemetry.rs  theme.rs  update.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: admin.proto  toki.proto
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/admin-ui/: .gitignore  buf.gen.yaml  buf.yaml  index.html  vite.config.ts
crates/server/admin-ui/src/: App.tsx  index.css
crates/server/admin-ui/src/components/: AreaChart.tsx  ThemeProvider.tsx
crates/server/admin-ui/src/components/ui/: badge.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  switch.tsx
crates/server/admin-ui/src/lib/: auth.ts  utils.ts
crates/server/admin-ui/src/views/: Audit.tsx  Overview.tsx  Rooms.tsx  ServerView.tsx
crates/server/src/: acme.rs  audio.rs  audit.rs  cert_store.rs  config.rs  identity.rs  lib.rs  metrics.rs  reaper.rs  server_config.rs  signaling.rs  state.rs  throttle.rs  tls.rs  validation.rs
crates/server/src/admin/: auth.rs  db.rs  dto.rs  grpc.rs  handlers.rs  mod.rs  routes.rs  sse.rs  watch.rs
crates/server/src/admin/assets/: app.js  index.html  style.css
crates/server/tests/: admin.rs  signaling.rs
docs/: USER_GUIDE.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-09/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/2026-06-10/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: admin-ui.dockerfile  admin-ui.entrypoint.sh  admin-ui.nginx.conf.template  build-opus-mingw.sh  build-windows-cross.sh  coverage.sh  server.dockerfile  server.entrypoint.sh
