[workspace]
resolver = "2"
members = ["crates/proto", "crates/server", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coton/toki"

[workspace.dependencies]
toki-proto = { path = "crates/proto" }

tokio = { version = "1.41", features = ["full"] }
# TLS feature enables `ServerTlsConfig` / `ClientTlsConfig`; transport
# feature (default) is required for `Server::builder().tls_config(...)`.
# We accept the extra ~1 MB of binary size for confidentiality on the
# gRPC signaling channel (which carries the shared-secret password
# and per-session audio MAC key).
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
tonic-build = "0.12"

bytes = "1.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
# ChaCha20-Poly1305 AEAD for UDP audio confidentiality + integrity.
# Same key bytes that previously fed BLAKE3 keyed_hash now key the
# AEAD; replaces the detached MAC since AEAD provides both
# authentication and confidentiality from a single primitive.
chacha20poly1305 = "0.10"
