[workspace]
resolver = "2"
members = ["crates/proto", "crates/server", "crates/client"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/toki-hq/toki"

[workspace.dependencies]
toki-proto = { path = "crates/proto" }

tokio = { version = "1.41", features = ["full"] }
# TLS feature is renamed in 0.13: `tls-ring` (rustls + ring crypto)
# replaces the old `tls` feature. We also bring back `tls-native-roots`
# so a real CA-issued cert (Let's Encrypt etc.) Just Works on the
# client side; self-signed certs are handled by a custom rustls
# verifier the client installs via `rustls_client_config(...)` (added
# in 0.13 — the main reason we're on this version).
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots"] }
prost = "0.13"
tonic-build = "0.13"

bytes = "1.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
# ChaCha20-Poly1305 AEAD for UDP audio confidentiality + integrity.
# Same key bytes that previously fed BLAKE3 keyed_hash now key the
# AEAD; replaces the detached MAC since AEAD provides both
# authentication and confidentiality from a single primitive.
chacha20poly1305 = "0.10"
