[package]
name = "toki-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "toki"
path = "src/main.rs"

# ── cargo-bundle metadata ───────────────────────────────────────────
# Consumed by `cargo install cargo-bundle && cargo bundle -p toki-client`.
# The macOS path lands a finished bundle at:
#   target/{debug,release}/bundle/osx/Toki.app
#
# Paths below are relative to this Cargo.toml's directory
# (`crates/client/`).
[package.metadata.bundle]
name = "Toki"
# Reverse-DNS identifier — matches the repo's GitHub org so installs
# from different forks don't collide on the same identifier. Adjust if
# you ever publish under your own domain.
identifier = "com.github.c-t-n.toki"
# Pre-built .icns in the icon folder — `build-platform-icons.sh`
# regenerates it from the hand-tuned PNG set.
icon = ["assets/icon/Toki.icns"]
short_description = "Hardware-feeling walkie-talkie for desktops"
long_description = """
Toki is a small walkie-talkie-style VOIP client. Hold a key, talk;
release, listen. Frequencies map 1:1 to rooms on a self-hosted Toki
server, so a group can carve up channels exactly like a hardware radio.
"""
# macOS app category — "Utilities" is the closest fit for a small
# always-on communication tool.
category = "public.app-category.utilities"
copyright = "© 2026 Toki contributors"
# Toki uses cpal + the system audio APIs, which work back to 10.15.
# eframe 0.32 also targets 10.15+ — earlier macOS won't link.
osx_minimum_system_version = "10.15"
# Extra Info.plist entries cargo-bundle doesn't have a typed slot for:
# microphone usage description (required for audio capture on macOS
# 10.14+), network exceptions for the HTTP gRPC handshake.
osx_info_plist_exts = ["macos/Info.plist.ext.xml"]

[dependencies]
toki-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = "0.3"

eframe = "0.32"
egui = "0.32"
egui-colorgradient = "0.2"
cpal = "0.15"
# Opus voice codec. `audiopus` wraps libopus; `audiopus_sys` builds it
# from vendored source (needs cmake + a C toolchain at build time), so
# the client binary is self-contained with no system libopus dependency.
# The server never links this — it relays opaque Opus payloads.
audiopus = "0.2"
global-hotkey = "0.6"
device_query = "4"
# Game controllers / joysticks. Passive and non-exclusive (a focused
# game still receives the input), `Gilrs` is `Send` with a non-blocking
# `next_event`, so it polls happily from our background input thread.
# Covers anything the OS exposes as a gamepad/joystick on mac/win/linux.
gilrs = "0.11"
# Stream Deck (Elgato VID 0x0fd9) + arbitrary USB HID buttons. The
# `macos-shared-device` feature is MANDATORY: without it, opening a HID
# device on macOS grabs it exclusively and the OS / vendor software stop
# seeing it. hidapi vendors a small C lib (needs a C toolchain at build
# time — already required by `audiopus_sys`).
#
# `default-features = false` is required to add `macos-shared-device`,
# but it also strips the default Linux backend, so we re-add it in the
# per-target table below. Windows needs no feature — hidapi's build.rs
# compiles its C backend and links setupapi unconditionally; macOS only
# needs `macos-shared-device`.
hidapi = { version = "2", default-features = false, features = ["macos-shared-device"] }
rustfft = "6"
serde = { workspace = true }
toml = "0.8"
dirs = "5"
# Used only to decode the bundled window-icon PNG into raw RGBA at
# startup. `default-features = false` strips ImageMagick-style format
# plugins we don't need; `png` is the only encoder/decoder we use.
image = { version = "0.25", default-features = false, features = ["png"] }
# ChaCha20-Poly1305 AEAD for per-packet UDP audio confidentiality +
# integrity. Server uses the same crate so the wire format stays
# symmetric. Replaces the BLAKE3 keyed_hash MAC we previously had —
# AEAD subsumes pure MAC.
chacha20poly1305 = { workspace = true }
# Tonic 0.13's `ClientTlsConfig` doesn't expose a way to install a
# custom rustls `ServerCertVerifier`, so we build the TLS stack
# ourselves and hand it to `Endpoint::connect_with_connector(...)`.
# Required because the server's default is an auto-generated self-
# signed cert, which wouldn't validate against system roots.
# See `runtime.rs::insecure_tls_config` for the rationale and the
# layered defenses that compensate.
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
hyper-util = "0.1"
tower = "0.5"
http = "1"
# Update checker: a blocking HTTPS GET to the GitHub Releases API on a
# dedicated thread (off the egui + gRPC/audio runtimes). `tls` selects
# ureq's rustls backend — reusing the rustls/ring stack already linked
# for gRPC, so no openssl / C toolchain is pulled in. We parse the JSON
# ourselves via serde_json rather than `into_json` so the same path is
# unit-testable against a captured fixture.
ureq = { version = "2", default-features = false, features = ["tls"] }
serde_json = "1"
# Pure-Rust semver comparison for the version check (handles pre-release
# / build metadata correctly, unlike a naive string/tuple compare).
semver = "1"
# Keypair-backed client identity: the identity IS an ed25519 public key
# (see `toki_proto::identity` for the shared derivation contract). Pure
# Rust, no C deps; the server verifies with the same crate.
ed25519-dalek = "2"
# OS-entropy seed for identity keygen. Already in the tree transitively
# (rustls/ring pull it); a direct dep just for the 32 seed bytes —
# lighter than adding `rand` for one call.
getrandom = "0.2"
# RNNoise-derived voice denoiser, pure Rust (no C deps). Its native
# frame shape — 480 samples of 48 kHz mono, f32 in i16 range — is
# exactly our wire frame, so the capture path feeds it directly with
# no rebuffering. `default-features = false` drops the crate's CLI
# binary dependencies (clap, hound, dasp); we only link the library.
nnnoiseless = { version = "0.5", default-features = false }

# hidapi's Linux build requires exactly one backend feature; because we
# turned default-features off (to get `macos-shared-device`), we re-add
# the default hidraw backend here so Linux builds. `linux-static-hidraw`
# links libudev statically — its dev headers must be present at build
# time (CI already installs them for other crates). No effect on
# mac/win builds.
[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = [
    "macos-shared-device",
    "linux-static-hidraw",
] }
