[package]
name = "toki-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "toki-server"
path = "src/bin/main.rs"

[dependencies]
toki-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
toml = "0.8"
# BLAKE3 of the session token is stored in the registry rather than
# the token itself, so a process memory snapshot or core dump doesn't
# leak live session credentials. ~1 GB/s on a single core — no
# measurable cost on the audio hot path.
blake3 = "1"
chacha20poly1305 = { workspace = true }
# Self-signed cert + key generator. Used to keep gRPC TLS always-on
# without forcing operators to provision a real cert for LAN
# deployments — the server writes an rcgen-generated cert pair to
# `tls/{cert,key}.pem` on first startup and reuses it thereafter.
rcgen = "0.13"
# rustls 0.23 requires the process to install a default
# `CryptoProvider` before any TLS operation; we pick ring at
# startup. Dep is explicit so the feature flags can't drift even
# if tonic's transitives change.
rustls = { version = "0.23", features = ["ring"] }
