[package]
name = "toki-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "toki-server"
path = "src/bin/main.rs"

[dependencies]
toki-proto = { workspace = true }
tokio = { workspace = true }
# `sync` feature gives us `BroadcastStream` so the admin SSE endpoint
# can pump a `tokio::sync::broadcast::Receiver<Snapshot>` straight
# into axum's `Sse::new(stream)`.
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { workspace = true }
# gRPC-Web adapter so browsers can call the admin gRPC service over a
# plain fetch/XHR. `GrpcWebLayer` wraps the generated AdminServer and
# is merged into the admin axum router (same TLS listener, no new port).
tonic-web = "0.13"
prost = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
toml = "0.8"
# BLAKE3 of the session token is stored in the registry rather than
# the token itself, so a process memory snapshot or core dump doesn't
# leak live session credentials. ~1 GB/s on a single core — no
# measurable cost on the audio hot path.
blake3 = "1"
chacha20poly1305 = { workspace = true }
# Self-signed cert + key generator. Used to keep gRPC TLS always-on
# without forcing operators to provision a real cert for LAN
# deployments — the server writes an rcgen-generated cert pair to
# `tls/{cert,key}.pem` on first startup and reuses it thereafter.
rcgen = "0.13"
# rustls 0.23 requires the process to install a default
# `CryptoProvider` before any TLS operation; we pick ring at
# startup. Dep is explicit so the feature flags can't drift even
# if tonic's transitives change.
rustls = { version = "0.23", features = ["ring"] }

# --- Admin web panel ---
#
# axum 0.8 shares hyper 1.x with tonic 0.13, so the two coexist in the
# same process without pulling two hyper majors into the tree. We use
# axum for the admin HTTP listener on a separate port; it never
# interacts with the gRPC service except through the shared registry.
axum = "0.8"
# axum's own `serve` only does plain HTTP. `axum-server` is the
# canonical rustls bridge — same hyper 1.x backbone, accepts a
# RustlsConfig built from the PEM bytes we already feed Tonic for
# the gRPC channel. Two layered protections fall out of this:
#   * cookies + login payload are no longer in cleartext over LAN
#   * the cookie's `Secure` flag is now meaningful
axum-server = { version = "0.7", features = ["tls-rustls"] }
# Async SSE bodies come from axum's `Sse` response, which expects a
# Stream of Event. tokio-stream's `BroadcastStream` is the adapter we
# use to pump the admin event broadcast channel into that stream.
serde_json = "1"
# Admin store, multi-backend: embedded SQLite (default, zero-config) or a
# remote MariaDB/MySQL or PostgreSQL server, selected by the connection
# URL. `default-features = false` + `tls-rustls-ring` keeps the no-OpenSSL
# / ring-only posture (the generic `tls-rustls` can pull aws-lc-rs;
# `tls-native-tls` is OpenSSL — both avoided). The `sqlite` driver vendors
# libsqlite3 statically, so the binary stays self-contained. Runtime query
# API only (no `macros` — compile-time `query!` needs one build-time
# DATABASE_URL and can't span three dialects).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "sqlite",
    "mysql",
    "postgres",
] }
# argon2id for the admin password hash. Pure-Rust, no C deps, ~10ms
# per verify which is fine on a login endpoint and stops cheap GPU
# bruteforce against a stolen `admin.db`.
argon2 = "0.5"
# CSPRNG for the seeded admin password + session tokens. `rand` is
# already a transitive of several deps; pulled in explicitly here so
# version pins don't drift if the transitives change.
rand = "0.8"
# Hex encoding for session token cookies. Keeps the cookie value
# ASCII-safe without dragging in base64.
hex = "0.4"
# Tower is needed at runtime now (not just tests) to layer GrpcWebLayer
# + the auth interceptor onto the admin gRPC service.
tower = "0.5"
# Host-health metrics (CPU / memory / disk) for the admin dashboard.
# `default-features = false` + only the components we read keeps the
# build surface (and platform syscalls) minimal; pure-Rust, no C deps.
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }

[dev-dependencies]
# Used to serialise individual tests that mutate process-global
# state (the TLS-auto-generation test sets the current working
# directory, which can't be safely parallelised under cargo test's
# default thread pool).
serial_test = "3"
tempfile = "3"
# Wiring for the gRPC integration tests in `tests/signaling.rs`:
# the in-process Tonic harness uses tower's service_fn to feed a
# pre-built duplex socket into Endpoint::connect_with_connector.
tower = "0.5"
hyper-util = "0.1"
